issue-212 Accordion small screen change (#216)
* issue-212 Accordion small screen change

* issue-212 Review Comments changes

---------

--- a/styles/simplified-styles.css
+++ b/styles/simplified-styles.css
@@ -109,6 +109,7 @@ a:hover {
 @media (min-width: 48rem) {
     :root {
         --section-margin: 2rem;
+        --is-large-screen: 1;
     }
 }
 
